# stardex

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-layer.yml  deploy.yml
app/: layout.tsx  providers.tsx
app/feedback/: page.tsx
backend/: .gitignore  README.md  pyproject.toml  requirements-layer.txt  requirements-ml.txt  requirements.txt
backend/app/: clustering.py  main.py  models.py
backend/app/services/: clustering.py  clustering.py.bak
components/: repository-clusters.tsx  repository-filters.tsx  repository-list.tsx  user-search.tsx
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/about/: page.tsx
frontend/app/feedback/: page.tsx
frontend/components/: footer.tsx  navbar.tsx  repository-clusters.tsx  repository-list.tsx  user-search.tsx
frontend/components/layout/: footer.tsx  navbar.tsx
frontend/components/repository/: cluster-card.tsx  cluster-settings.tsx  cluster-view.tsx  repository-clusters.tsx  repository-filters.tsx  repository-list.tsx
frontend/components/user/: user-search.tsx
frontend/lib/: clustering-api.ts  clustering.ts  github.ts
frontend/lib/clustering/: utils.ts
frontend/lib/constants/: clustering.ts
frontend/lib/types/: clustering.ts
frontend/store/: github.ts
infrastructure/: DEPLOYMENT.md  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: constants.ts
infrastructure/lib/config/: environment.ts
infrastructure/lib/constructs/: README.md  api-endpoint.ts  backend-construct.ts  lambda-function.ts  monitoring-construct.ts  monitoring-dashboard.ts  static-website.ts  storage-construct.ts
infrastructure/lib/monitoring/: monitoring-stack.ts
infrastructure/lib/networking/: vpc-stack.ts
infrastructure/lib/security/: security-stack.ts
infrastructure/lib/stacks/: README.md  backend-stack.ts  bootstrap-stack.ts  deployment-stack.ts  dns-stack.ts  frontend-stack.ts  lambda-layer-stack.ts  (+5 more)
infrastructure/scripts/: bootstrap.sh  bundle-lambda.sh
lib/: clustering.ts  github.ts
store/: github.ts
(+17 files in other folders)
