[tool.poetry]
name = "stardex-backend"
version = "0.1.0"
description = "Backend service for GitHub Stars Explorer"
authors = ["Bjorn Melin"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
mangum = "^0.17.0"
boto3 = "^1.34.21"
pydantic = "^2.5.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"