[tool.poetry]
name = "stardex-api"
version = "0.1.0"
description = "API backend service for GitHub Stars Explorer"
authors = ["Bjorn Melin"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
numpy = ">=2.2.2"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"